--- a/build.gradle
+++ b/build.gradle
@@ -288,39 +288,39 @@ opensearchplugin {
     noticeFile = rootProject.file('NOTICE.txt')
 }
 
-task compileNative(type:Exec) {
+//task compileNative(type:Exec) {
 //    dependsOn cmakeJniLib
-    def osName = System.getProperty('os.name').toLowerCase()
-    def osArch = System.getProperty('os.arch').toLowerCase()
-    def projectRoot = '/Users/finnrobl/Documents/k-NN'
-
-    def outputName = osName.contains('windows') ? 'ffm_native.dll' :
-            osName.contains('mac') ? 'libffm_native.dylib' :
-                    'libffm_native.so'
-
-    // Change working directory to the ffm folder
-    workingDir "${projectRoot}/ffm"
-
-    if (osName.contains('windows')) {
-        commandLine 'gcc', '-shared', '-o', outputName, 'innerProductFFM.c'
-    } else {
-        commandLine 'gcc', '-shared', '-fPIC', '-o', outputName, 'innerProductFFM.c'
-    }
-
-    doLast {
-        copy {
-            from "${projectRoot}/ffm/${outputName}"
-            into "${projectRoot}/jni/build/release"
-            into "${projectRoot}/src/main/resources"
-        }
-    }
-}
+//    def osName = System.getProperty('os.name').toLowerCase()
+//    def osArch = System.getProperty('os.arch').toLowerCase()
+//    def projectRoot = '/Users/finnrobl/Documents/k-NN'
+//
+//    def outputName = osName.contains('windows') ? 'ffm_native.dll' :
+//            osName.contains('mac') ? 'libffm_native.dylib' :
+//                    'libffm_native.so'
+//
+//    // Change working directory to the ffm folder
+//    workingDir "${projectRoot}/ffm"
+//
+//    if (osName.contains('windows')) {
+//        commandLine 'gcc', '-shared', '-o', outputName, 'innerProductFFM.c'
+//    } else {
+//        commandLine 'gcc', '-shared', '-fPIC', '-o', outputName, 'innerProductFFM.c'
+//    }
+//
+//    doLast {
+//        copy {
+//            from "${projectRoot}/ffm/${outputName}"
+//            into "${projectRoot}/jni/build/release"
+//            into "${projectRoot}/src/main/resources"
+//        }
+//    }
+//}
 
 //jar.dependsOn compileNative
 
 tasks.named("integTest").configure {
     it.dependsOn(project.tasks.named("bundlePlugin"))
-    it.dependsOn(project.tasks.named("compileNative"))
+//    it.dependsOn(project.tasks.named("compileNative"))
 }
 
 
@@ -495,7 +495,7 @@ integTest {
     if (integTestDependOnJniLib) {
         dependsOn buildNmslib
         dependsOn buildJniLib
-        dependsOn compileNative
+//        dependsOn compileNative
     }
     systemProperty 'tests.security.manager', 'false'
     systemProperty 'java.io.tmpdir', opensearch_tmp_dir.absolutePath
@@ -633,6 +633,28 @@ task updateVersion {
         }
     }
 }
+tasks.withType(Javadoc).configureEach {
+    CoreJavadocOptions opt = options as CoreJavadocOptions
+    opt.addStringOption("source", "21")
+    opt.addBooleanOption("-enable-preview", true)
+}
+
+// task generateJavadocs(type: Javadoc) {
+//     options {
+//         addBooleanOption('--enable-preview', true)
+//         addStringOption('-release', '21')
+//     }
+// }
+
+// tasks.withType(Javadoc) {
+// options {
+//         addStringOption('enable-preview', '')
+//         source = '21'
+//     }
+// 
+//     jvmArgs += ['--enable-preview']
+// }
+
 //
 ////
 //model {
