--- a/build.gradle
+++ b/build.gradle
@@ -80,11 +80,6 @@ plugins {
     id 'c'
 }
 
-lombok {
-    version = "1.18.36"  // otherwise it breaks with JDK 23; see https://github.com/projectlombok/lombok/issues/3722
-}
-
-
 apply from: 'gradle/formatting.gradle'
 apply plugin: 'opensearch.opensearchplugin'
 apply plugin: 'opensearch.rest-test'
@@ -200,8 +195,10 @@ allprojects {
     }
     apply from: rootProject.file('build-tools/repositories.gradle').absoluteFile
     plugins.withId('java') {
-       sourceCompatibility = targetCompatibility = "23"
-  }
+       sourceCompatibility = targetCompatibility = "21"
+    }
+
+    
 
     afterEvaluate {
         project.dependencyLicenses.enabled = false
@@ -258,9 +255,11 @@ publishing {
 }
 
 compileJava {
+    options.compilerArgs.add('--enable-preview')
     options.compilerArgs.addAll(["-processor", 'lombok.launch.AnnotationProcessorHider$AnnotationProcessor'])
 }
 compileTestJava {
+    options.compilerArgs.add('--enable-preview')
     options.compilerArgs.addAll(["-processor", 'lombok.launch.AnnotationProcessorHider$AnnotationProcessor'])
 }
 compileTestFixturesJava {
@@ -513,6 +512,7 @@ integTest {
 
 testClusters.integTest {
     testDistribution = "ARCHIVE"
+    jvmArgs('--enable-preview')
     // Optionally install security
     if (System.getProperty("security.enabled") != null) {
         configureSecurityPlugin(testClusters.integTest)
@@ -603,3 +603,10 @@ task updateVersion {
         }
     }
 }
+
+tasks.withType(Javadoc).configureEach {
+    CoreJavadocOptions opt = options as CoreJavadocOptions
+    opt.addStringOption("source", "21")
+    opt.addBooleanOption("-enable-preview", true)
+}
+
