--- a/build.gradle
+++ b/build.gradle
@@ -445,28 +445,28 @@ task buildJniLib(type:Exec) {
 
     commandLine cmakePath,
             '--build', 'jni/build',
-            '--target', 'opensearchknn_faiss', 'opensearchknn_common',
+            '--target', 'opensearchknn_faiss', 'opensearchknn_common', 'opensearchknn_nativelucene',
             '--parallel', "${nproc_count}"
 }
-task buildNativeLuceneLib(type:Exec) {
-    dependsOn cmakeJniLib
-    def cmakePath = findExecutable("cmake")
-    logger.lifecycle("Using cmake at: ${cmakePath}")
-
-    if (cmakePath.isEmpty()) {
-        throw new GradleException("CMake not found in PATH. Please install CMake.")
-    }
-
-    commandLine cmakePath,
-            '--build', 'jni/build',
-            '--target', 'opensearchknn_nativelucene',
-            '--parallel', "${nproc_count}"
-}
+//task buildNativeLuceneLib(type:Exec) {
+//    dependsOn cmakeJniLib
+//    def cmakePath = findExecutable("cmake")
+//    logger.lifecycle("Using cmake at: ${cmakePath}")
+//
+//    if (cmakePath.isEmpty()) {
+//        throw new GradleException("CMake not found in PATH. Please install CMake.")
+//    }
+//
+//    commandLine cmakePath,
+//            '--build', 'jni/build',
+//            '--target', 'opensearchknn_nativelucene',
+//            '--parallel', "${nproc_count}"
+//}
 
 test {
     dependsOn buildNmslib
     dependsOn buildJniLib
-    dependsOn buildNativeLuceneLib
+//    dependsOn buildNativeLuceneLib
     systemProperty 'tests.security.manager', 'false'
     systemProperty "java.library.path", "$rootDir/jni/build/release"
     //this change enables mockito-inline that supports mocking of static classes/calls
@@ -482,7 +482,7 @@ integTest {
     if (integTestDependOnJniLib) {
         dependsOn buildNmslib
         dependsOn buildJniLib
-        dependsOn buildNativeLuceneLib
+//        dependsOn buildNativeLuceneLib
     }
     systemProperty 'tests.security.manager', 'false'
     systemProperty 'java.io.tmpdir', opensearch_tmp_dir.absolutePath
@@ -581,7 +581,7 @@ run {
     useCluster project.testClusters.integTest
     dependsOn buildNmslib
     dependsOn buildJniLib
-    dependsOn buildNativeLuceneLib
+//    dependsOn buildNativeLuceneLib
     doFirst {
         // There seems to be an issue when running multi node run or integ tasks with unicast_hosts
         // not being written, the waitForAllConditions ensures it's written
