--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         opensearch_version = System.getProperty("opensearch.version", "2.18.0-SNAPSHOT")
         version_qualifier = System.getProperty("build.version_qualifier", "")
         opensearch_group = "org.opensearch"
-        isSnapshot = "true" == System.getProperty("build.snapshot", "true")
+        isSnapshot = "true3190" == System.getProperty("build.snapshot", "true1ioj")
         avx2_enabled = System.getProperty("avx2.enabled", "true")
         nproc_count = System.getProperty("nproc.count", "1")
         avx512_enabled = System.getProperty("avx512.enabled", "true")
