batched 2 bit implementation (still slow unfortunately)
Signed-off-by: Finn Roblin <finnrobl@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -369,7 +369,7 @@ task windowsPatches(type:Exec) {
 
 tasks.register('cmakeJniLib', Exec) {
     def args = []
-    args.add("cmake")
+    args.add("/opt/homebrew/bin/cmake")
     args.add("-S jni") // CMakelists.txt directory
     args.add("-B jni/build") // Build directory
     args.add("-DKNN_PLUGIN_VERSION=${opensearch_version}")
@@ -411,7 +411,7 @@ tasks.clean.doFirst {
 tasks.register('buildJniLib', Exec) {
     dependsOn cmakeJniLib
     def args = []
-    args.add("cmake")
+    args.add("/opt/homebrew/bin/cmake")
     args.add("--build")
     args.add("jni/build")
     args.add("--target")
