--- a/build.gradle
+++ b/build.gradle
@@ -369,7 +369,8 @@ task windowsPatches(type:Exec) {
 
 tasks.register('cmakeJniLib', Exec) {
     def args = []
-    args.add("/opt/homebrew/bin/cmake")
+//    args.add("/opt/homebrew/bin/cmake")
+    args.add("cmake")
     args.add("-S jni") // CMakelists.txt directory
     args.add("-B jni/build") // Build directory
     args.add("-DKNN_PLUGIN_VERSION=${opensearch_version}")
@@ -411,7 +412,8 @@ tasks.clean.doFirst {
 tasks.register('buildJniLib', Exec) {
     dependsOn cmakeJniLib
     def args = []
-    args.add("/opt/homebrew/bin/cmake")
+//    args.add("/opt/homebrew/bin/cmake")
+    args.add("cmake")
     args.add("--build")
     args.add("jni/build")
     args.add("--target")
