--- a/qa/restart-upgrade/build.gradle
+++ b/qa/restart-upgrade/build.gradle
@@ -105,6 +105,15 @@ testClusters {
                 excludeTestsMatching "org.opensearch.knn.bwc.IndexingIT.testKNNIndexBinaryForceMerge"
             }
         }
+        // excludes: 1.any; 2.x where x < 17
+        def validPrefixesForQFrameBitEncoderBWCChecks = ['1.'] + ((0..16).collect { "2.${it}." } as Collection<String>)
+        if (validPrefixesForQFrameBitEncoderBWCChecks.any { knn_bwc_version.startsWith(it) }
+                ) {
+            filter {
+                excludeTestsMatching "org.opensearch.knn.bwc.IndexingIT.testRandomRotationBWC"
+                excludeTestsMatching "org.opensearch.knn.bwc.IndexingIT.testADC_BWC"
+            }
+        }
 
 
         if (versionsBelow2_3.any {knn_bwc_version.startsWith(it) }) {
@@ -238,6 +247,30 @@ testClusters {
             filter {
                 excludeTestsMatching "org.opensearch.knn.bwc.IndexingIT.testKNNIndexLuceneQuantization"
                 excludeTestsMatching "org.opensearch.knn.bwc.IndexingIT.testKNNIndexBinaryForceMerge"
+            }
+        }
+
+        if (knn_bwc_version.startsWith("1.") ||
+                knn_bwc_version.startsWith("2.0.") ||
+                knn_bwc_version.startsWith("2.1.") ||
+                knn_bwc_version.startsWith("2.2.") ||
+                knn_bwc_version.startsWith("2.3.") ||
+                knn_bwc_version.startsWith("2.4")  ||
+                knn_bwc_version.startsWith("2.5.") ||
+                knn_bwc_version.startsWith("2.6.") ||
+                knn_bwc_version.startsWith("2.7.") ||
+                knn_bwc_version.startsWith("2.8.") ||
+                knn_bwc_version.startsWith("2.9.") ||
+                knn_bwc_version.startsWith("2.10.") ||
+                knn_bwc_version.startsWith("2.11.") ||
+                knn_bwc_version.startsWith("2.12.") ||
+                knn_bwc_version.startsWith("2.13.") ||
+                knn_bwc_version.startsWith("2.14.") ||
+                knn_bwc_version.startsWith("2.15.") ||
+                knn_bwc_version.startsWith("2.16.")) {
+            filter {
+                excludeTestsMatching "org.opensearch.knn.bwc.IndexingIT.testRandomRotationBWC"
+                excludeTestsMatching "org.opensearch.knn.bwc.IndexingIT.testADC_BWC"
             }
         }
 
